# zerorunner

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  dock.md  docker-compose-app.yml  docker-compose-build-frontend.yml  docker-compose-db-redis.yml  docker-compose-selenium-dynamic-grid.yml  docker-compose-selenium.yml  docker-compose-zalenium.yml  docker-compose.yml  manage.py  node-config.toml  requirements  test.py
backend/: .env  .env.example  .gitignore  README.md  config.py  conftest.py  main.py  pyproject.toml  requirements  start.sh  test.py
backend/autotest/: __init__.py  app.py  config.py  config_dev.py
backend/autotest/apis/: __init__.py  api_router.py  deps.py
backend/autotest/config/: __init__.py  config.py
backend/autotest/corelibs/: __init__.py  backend.py  bredis.py  exc_db.py  http_response.py  logger.py  pagination.py  serialize.py
backend/autotest/db/: __init__.py  my_redis.py  redis.py  session.py
backend/autotest/exc/: codes.py  consts.py  exceptions.py  middleware.py
backend/autotest/exceptions/: exceptions.py
backend/autotest/httprunner/: __main__.py  compat.py  initialize.py  make.py  (+8 more)
backend/celery_worker/: worker.py
backend/db_script/: db_init.sql  my.cnf  redis.conf  zerorunner.sql
backend/flask_script/: __init__.py
backend/test/: generate_tree.py
backend/zerorunner/: __init__.py  client.py  exceptions.py  loader.py  main.py  models.py  parser.py  parser_param.py  report.py  response.py  runner.py  runner_new.py  script_code.py  snowflake.py  testcase.py  testcase_new.py  utils.py
(+1030 files in other folders)
