[project]
name = "zerorunner"
version = "0.1.0"
description = "全栈自动化平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.1.0",
    "aiohttp==3.10.10",
    "aiomysql==0.2.0",
    "anyio==3.6.2",
    "arrow==1.2.3",
    "async-timeout==4.0.2",
    "celery==5.4.0",
    "certifi==2022.12.7",
    "charset-normalizer==3.0.1",
    "click==8.1.3",
    "colorama==0.4.6",
    "fastapi==0.111.1",
    "filetype==1.2.0",
    "gevent>=25.9.1",
    "gunicorn==20.1.0",
    "h11==0.14.0",
    "idna==3.4",
    "jinja2==3.0.3",
    "jmespath==1.0.1",
    "jsonpath==0.82",
    "loguru==0.6.0",
    "markupsafe==2.1.2",
    "orjson==3.10.10",
    "py-mock==1.2.1",
    "pydantic==1.10.16",
    "pymysql==1.0.2",
    "python-dotenv==1.0.0",
    "pytz>=2025.2",
    "redis==4.5.1",
    "requests==2.28.2",
    "requests-toolbelt==1.0.0",
    "rsa>=4.9.1",
    "selenium==4.9.1",
    "sniffio==1.3.0",
    "sqlalchemy==2.0.21",
    "tzdata>=2025.2",
    "urllib3==1.26.14",
    "uvicorn==0.20.0",
    "websockets==11.0.3",
    "win32-setctime==1.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
